add css bg-img to menu page

--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -1,26 +1,16 @@
-<div class="program_row_container">
+<div class="row">
 
-    <div class="program_col_container"
+    <div class="col-xs-12 col-sm-4"
         ng-repeat="content in contentListCtrl.contents track by $index">
         
-        <img class="img-responsive no-margin program" ng-if="content.fields.image"
-                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'200px',height:'150px',mode:'crop'}) }}"
-                onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=200px&height=150px&mode=crop'"
-                alt="{{ content.fields.text }}"/> 
-
-        <div class="program_text">
-            <h3>
-                <a ng-if="!fieldEditMode"  ng-href="{{ !fieldEditMode ? content.contentLinkUrl : ''}}">{{content.fields.text}}</a>
-                <rubedo-field ng-if="fieldEditMode" field="{{content.type.title}}"></rubedo-field>
-            </h3>
-
-            <p ng-if="!contentListCtrl.titleOnly">
-                {{content.fields.summary}}
-                <rubedo-field ng-if="fieldEditMode" field="{{content.type.summary}}"></rubedo-field>
-            </p> 
-            
-            <div class="program_date">{{content.fields.dateDebutPretty}}</div>
-        </div>   
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
 
     </div>
 
