--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -4,7 +4,10 @@
         ng-repeat="content in contentListCtrl.contents track by $index">
         
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" 
+                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'200px',height:'150px',mode:'crop'}) }}"
+                onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=200px&height=150px&mode=crop'"
+                alt="{{ content.fields.text }}">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -17,63 +20,5 @@
 </div>
 
 <style>
-.program_date {
-    font-variant: small-caps;
-    background: #467098;
-    width: 110px;
-    height: 20px;
-    line-height: 27px;
-    font-size: 1.4rem;
-    text-align: center;
-    color: white;
-    border-radius: 7px;
-    position: relative;
-    float: right;
-}
 
-img.program {
-    border-radius: 7px;
-}
-
-.program_text {
-    margin: 14px;
-    width: 100%;
-}
-
-.program_text h3 {
-    margin: 0 0 1rem 0;
-}
-
-.program_row_container {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	margin: 5vw 1vw;
-}
-
-.program_col_container {
-	display: flex;
-    padding: 0;
-    margin: 0 3rem 3rem;
-    border-radius: 7px;
-    width: 100vw;
-    background: hsla(0, 0%, 96%, 1);
-    box-shadow: hsla(0, 0%, 85%, 1) 1px 3px;
-}
-
-@media screen and (min-width: 1200px) {
-	.program_col_container {
-		width: 44vw;
-	}
-}
-
-.program_col_container a {
-	color: hsla(208, 56%, 41%, 1);
-}
-.program_col_container a:hover {
-	text-decoration: none;
-	color: hsla(208, 56%, 30%, 1);
-}
 </style>
