--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -5,7 +5,7 @@
         
         <div class="card proposition">
             <img class="card-img-top" 
-                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:400px',height:'200px',mode:'crop'}) }}"
+                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'400px',height:'200px',mode:'crop'}) }}"
                 onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=400px&height=200px&mode=crop'"
                 alt="{{ content.fields.text }}">
             <div class="card-body">
