design card list bethanien

--- a/theme/bethanien/css/bethanien.less
+++ b/theme/bethanien/css/bethanien.less
@@ -176,6 +176,7 @@ iframe{width:100% !important}
 }
 .album{
 		background: white;
+		border: 1px solid black;
 		text-align: left;
 		padding-bottom:10px; margin-bottom: 20px;
 		a, a:hover{color: @txt; text-decoration: none;}
