--- a/theme/bethanien/templates/blocks/contentList/contentList.html
+++ b/theme/bethanien/templates/blocks/contentList/contentList.html
@@ -93,12 +93,13 @@
                     <!--DEFAUT-->
                     <div ng-switch-default class="album">
                         <a ng-href="{{ content.contentLinkUrl }}">
-                            <img  ng-if="content.fields.image" style="width: 100%"
-                                                 ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'400px',height:'200px',mode:'crop'}) }}"
-                                                 alt="{{ content.fields.text }}"/>
+                            <img    ng-if="content.fields.image" style="width: 100%"
+                                    ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'400px',height:'200px',mode:'crop'}) }}"
+                                    onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=400px&height=200px&mode=crop'"
+                                    alt="{{ content.fields.text }}"/>
                             <div>
                                 <h4>{{content.fields.text}}</h4>
-                                <!--<p>{{content.fields.summary}}</p>-->
+                                <p>{{content.fields.summary}}</p>
                             </div>
                             
                         </a>                  
