design content detail bethanien

--- a/theme/bethanien/templates/blocks/contentDetail.html
+++ b/theme/bethanien/templates/blocks/contentDetail.html
@@ -1,4 +1,4 @@
-<div ng-controller="ContentDetailController as contentDetailCtrl" >
+<div ng-controller="ContentDetailController as contentDetailCtrl" class="contentDetail_main">
 <button ng-if="fieldEditMode"
             title="Edit full content"
             class="btn btn-default"
