--- a/theme/bethanien/templates/blocks/contentDetail/actualites.html
+++ b/theme/bethanien/templates/blocks/contentDetail/actualites.html
@@ -1,6 +1,6 @@
 <div class="" itemscope itemtype="http://schema.org/NewsArticle">
 
-	<div class="container-fluid">
+	<div class="container-fluid" class="contentDetail_actualites">
 		<div class="row">
 			<div class="col-xs-12 ">
 				<div ng-controller="BreadcrumbController as breadcrumbCtrl">
