--- a/theme/bethanien/templates/blocks/contentDetail/contact.html
+++ b/theme/bethanien/templates/blocks/contentDetail/contact.html
@@ -1,4 +1,4 @@
-<div ng-if="blockConfig.contentOnly">
+<div ng-if="blockConfig.contentOnly" class="contentDetail_contact">
 <div class="container paddingv">
 		
 		<div class="row padding-large center-cols contact row-eq-height">
