design card list bethanien

--- a/theme/bethanien/templates/blocks/contentList/contentList.html
+++ b/theme/bethanien/templates/blocks/contentList/contentList.html
@@ -99,7 +99,7 @@
                                     alt="{{ content.fields.text }}"/>
                             <div>
                                 <h4>{{content.fields.text}}</h4>
-                                <p>{{content.fields.summary}}</p>
+                                <!-- <p>{{content.fields.summary}}</p> -->
                             </div>
                             
                         </a>                  
