--- a/theme/bethanien/css/bethanien.less
+++ b/theme/bethanien/css/bethanien.less
@@ -36,6 +36,7 @@
 @txt_grey:#707070;
 @rouge:#92220c;
 @bleu_bethanien:#006ba8;
+@bleu_dark: #003b78;
 
 
 
@@ -57,6 +58,32 @@ h2.titre-block{
 h2.titre-block:before, h2.titre-block:after{
 	content:''; display: inline-block; height: 2px; background-color: @grey; width: 100%; max-width: 20%;vertical-align: middle;
 }
+
+@media screen and (min-width: @min_xs){
+    .no-padding{padding: 0}
+}
+.no-padding-blocks{padding: 0}
+
+.button:hover{opacity:0.8;}
+.button.rouge{background: @bleu_bethanien;box-shadow: 0px 2px @grey; color:white}
+.buttonRouge{background: @rouge;box-shadow: 0px 2px @grey; color:white}
+.button.submit{border: 2px solid @bleu_dark; color:@bleu_dark;}
+.button.submit.disabled, .button.rouge.disabled{color:@bleu_dark; border: 2px solid @bleu_dark; cursor: default}
+
+.border-top-red{border-top:solid 1px @bleu_bethanien; margin-top:0;}
+
+.text-article.infos{max-width: 860px;} // pour les infos pratiques
+.text-article.infos>div{margin-bottom: 12px;}
+
+.text-article{margin:0 auto; margin-top:12px; max-width:640px; padding-left:10px; padding-right:10px; p{font-size:16px; line-height: 1.6em; margin-bottom:20px};font-size:16px; line-height: 1.6em; margin-bottom:20px; text-align: justify}
+span.tags+span.tags:after{content:','; margin-right:3px;margin-left: 0} // virgule après un tag
+header .text-article h1,header .text-article h2,header .text-article h3, header .text-article h4, header .text-article p{text-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,0.33);}
+.text-article p img {max-width:100%; height:auto !important; margin:20px auto; display: block}
+.text-article p img.right, .text-article p img.left{margin: 12px auto;}
+.text-article iframe{margin-left:auto; margin-right: auto; display: block; }
+p.small, .small p{font-size: 12px !important}
+ 
+.bg-white blockquote{border-top:2px solid @bleu_dark;border-bottom:2px solid @bleu_dark;}
 
 /*FIXES*/
 .rubedo-block-contentContribution{min-height:0 !important}
