--- a/theme/bethanien/css/bethanien.less
+++ b/theme/bethanien/css/bethanien.less
@@ -95,8 +95,22 @@ h2.titre-block:before, h2.titre-block:after{
 }
 .no-padding-blocks{padding: 0}
 
-/* .button:hover{opacity:0.8;}
-.button.rouge{background: @bleu_bethanien;box-shadow: 0px 2px @grey; color:white}
+.button:hover{opacity:0.8;}
+.button {
+	min-width: 200px;
+    padding: 12px 24px;
+    font-family: Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    margin: 12px 3px 0;
+    transition: .3s ease opacity;
+    display: inline-block;
+    border-radius: 5px;
+}
+/*.button.rouge{background: @bleu_bethanien;box-shadow: 0px 2px @grey; color:white}
 .buttonRouge{background: @rouge;box-shadow: 0px 2px @grey; color:white} */
 .button.submit{border: 2px solid @bleu_dark; color:@bleu_dark;}
 .button.submit.disabled, .button.rouge.disabled{color:@bleu_dark; border: 2px solid @bleu_dark; cursor: default}
