design content detail bethanien

--- a/theme/bethanien/css/bethanien.less
+++ b/theme/bethanien/css/bethanien.less
@@ -97,7 +97,7 @@ h2.titre-block:before, h2.titre-block:after{
 
 .button:hover{opacity:0.8;transition:all 0.2s;}
 .button {
-	min-width: 200px;
+	/* min-width: 200px; */
     padding: 12px 24px;
     font-family: Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;
     text-transform: uppercase;
@@ -108,14 +108,14 @@ h2.titre-block:before, h2.titre-block:after{
     margin: 12px 3px 0;
     transition: .3s ease opacity;
     display: inline-block;
-	border-radius: 5px;
+	border-radius: 15px;
 	cursor: pointer;
 }
 /*.button.rouge{background: @bleu_bethanien;box-shadow: 0px 2px @grey; color:white}
 .buttonRouge{background: @rouge;box-shadow: 0px 2px @grey; color:white} */
 .button.submit{border: 2px solid @bleu_dark; color:@bleu_dark;}
 .button.submit.disabled:hover, .button.rouge.disabled:hover{opacity:1;cursor: default}
-.button.submit.disabled, .button.rouge.disabled{color:@bleu_light; border: 2px solid @bleu_light; cursor: default; font-style: italic;}
+.button.submit.disabled, .button.rouge.disabled{color:@grey; border: 2px solid @grey; cursor: default; font-style: italic;}
 
 .border-top-red{border-top:solid 1px @bleu_bethanien; margin-top:0;}
 
@@ -205,7 +205,7 @@ header.content{
 		//box-shadow:inset 0 0 0 1000px rgba(84,84,84,.33);
 		line-height: 420px;
 		text-align: center;
-		a, a:hover{color: white; text-decoration: none; display: inline-block; padding: 3px 12px 0px; border: 2px solid white; border-radius: 18px; text-transform: uppercase}
+		a, a:hover{color: white; text-decoration: none; display: inline-block; padding: 6px 17px; border: 2px solid white; border-radius: 18px; text-transform: uppercase}
 		h1{font-size: 3em;}
 		p{font-size: 1.2em}
 }
