design content detail bethanien

--- a/theme/bethanien/templates/blocks/navigation.html
+++ b/theme/bethanien/templates/blocks/navigation.html
@@ -25,7 +25,7 @@
                 </a>
                 
                  <!-- Logo CCN -->
-                <a ng-href="{{'https://www.chemin-neuf.de/'+lg+'/'}}" ><img class="xs-hidden" style="margin: 5px 17px;" title="{{lang[lg]['ccn'] || 'Communauté du Chemin Neuf'}}" ng-src="{{rubedo.imageUrl.getUrlByMediaId('56abde8dc445eccc138b507e',{height:'60px',mode:'boxed'})}}"/></a>
+                <a ng-href="{{'https://www.chemin-neuf.ch/'+lg+'/'}}" ><img class="xs-hidden" style="margin: 5px 17px;" title="{{lang[lg]['ccn'] || 'Communauté du Chemin Neuf'}}" ng-src="{{rubedo.imageUrl.getUrlByMediaId('56abde8dc445eccc138b507e',{height:'60px',mode:'boxed'})}}"/></a>
             </div>
             <div class="container">
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
