--- a/theme/bethanien/css/bethanien.less
+++ b/theme/bethanien/css/bethanien.less
@@ -124,7 +124,7 @@ h2.titre-block:before, h2.titre-block:after{
 
 .text-article{margin:0 auto; margin-top:12px; max-width:640px; padding-left:10px; padding-right:10px; p{font-size:16px; line-height: 1.6em; margin-bottom:20px};font-size:16px; line-height: 1.6em; margin-bottom:20px; text-align: justify}
 span.tags+span.tags:after{content:','; margin-right:3px;margin-left: 0} // virgule après un tag
-header .text-article h1,header .text-article h2,header .text-article h3, header .text-article h4, header .text-article p{text-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,0.33);}
+/* header .text-article h1,header .text-article h2,header .text-article h3, header .text-article h4, header .text-article p{text-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,0.33);} */
 .text-article p img {max-width:100%; height:auto !important; margin:20px auto; display: block}
 .text-article p img.right, .text-article p img.left{margin: 12px auto;}
 .text-article iframe{margin-left:auto; margin-right: auto; display: block; }
